--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "ISC",
   "scripts": {
     "dev": "webpack serve --mode development",
-    "build": "webpack --mode production",
+    "build": "npm run clean && webpack --mode production",
     "clean": "rimraf dist"
   },
   "browserslist": [
