--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,9 +1,9 @@
 name: Deploy on GitHub Pages
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "develop" ]
     
 permissions:
   contents: write
