--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,9 +1,9 @@
 name: Deploy on GitHub Pages
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "cicd" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "cicd" ]
     
 permissions:
   contents: write
@@ -14,36 +14,25 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
-    steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        
-    - name: Build
-      run: |
-        npm install
-        npm run build
-
-    - name: Upload artifact for deployment
-      uses: actions/upload-pages-artifact@v3
-
-      with:
-        path: ./dist
-        name: github-pages
-          
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
 
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build and Optimize
+      run: npm run build
+
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
+
