--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "devDependencies": {
     "clean-css": "^5.3.3",
+    "clean-css-cli": "^5.6.3",
     "cssnano": "^7.0.7",
     "html-minifier-terser": "^7.2.0",
     "imagemin": "^9.0.1",
