--- a/package.json
+++ b/package.json
@@ -7,19 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "webpack serve --mode development",
-    "build-old": "npm run clean && webpack --mode production",
-    "clean": "rimraf dist",
-    "build:html": "find src -name '*.html' -exec sh -c 'for f; do mkdir -p dist/$(dirname \"$f\" | cut -c5-); html-minifier-terser --collapse-whitespace --remove-comments \"$f\" -o dist/${f#src/}; done' sh {} +",
-    "build:css": "find src -name '*.css' -exec sh -c 'for f; do mkdir -p dist/$(dirname \"$f\" | cut -c5-); cleancss -o dist/${f#src/%.css/.min.css} \"$f\"; done' sh {} +",
-
-    "build:purgecss": "purgecss --css 'dist/**/*.min.css' --content 'src/**/*.html' 'src/**/*.js' --output dist/",
-    "build:js": "find src -name '*.js' -exec sh -c 'for f; do mkdir -p dist/$(dirname \"$f\" | cut -c5-); terser \"$f\" -o dist/${f#src/%.js/.min.js} --compress --mangle; done' sh {} +",
-
-    "build:images": "npx imagemin 'src/images/*.{jpg,png,svg}' --plugin=mozjpeg --plugin=pngquant --plugin=svgo --out-dir=dist/images",
-    "update:html:css": "find dist -name '*.html' -exec sed -i 's/\\.css/\\.min.css/g' {} +",
-    "update:html:js": "find dist -name '*.html' -exec sed -i 's/\\.js/\\.min.js/g' {} +",
-    "build": "npm run build:html && npm run build:css && npm run build:purgecss && npm run build:js && npm run build:images && npm run update:html:css && npm run update:html:js"
+    "build": "rimraf dist && node scripts/build.mjs"
   },
   "browserslist": [
     "> 0.1%",
@@ -30,6 +18,7 @@
     "clean-css": "^5.3.3",
     "clean-css-cli": "^5.6.3",
     "cssnano": "^7.0.7",
+    "globby": "^14.1.0",
     "html-minifier-terser": "^7.2.0",
     "imagemin": "^9.0.1",
     "imagemin-mozjpeg": "^10.0.0",
