--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "build": "rimraf dist && node scripts/build.mjs"
+    "build": "node scripts/build.mjs"
   },
   "browserslist": [
     "> 0.1%",
