--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -29,6 +29,13 @@ jobs:
 
     - name: Build and Optimize
       run: npm run build
+    
+    - name: Upload artifact for deployment
+      uses: actions/upload-pages-artifact@v3
+
+      with:
+        path: ./dist
+        name: github-pages
 
   deploy:
     environment:
