--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "webpack serve --mode development",
-    "build": "npm run clean && webpack --mode production",
-    "clean": "rimraf dist"
+    "build": "node scripts/build.mjs"
   },
   "browserslist": [
     "> 0.1%",
@@ -17,29 +15,16 @@
     "ie >= 9"
   ],
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
-    "autoprefixer": "^10.4.21",
-    "babel-loader": "^9.2.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^13.0.0",
-    "core-js": "^3.41.0",
-    "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.2",
-    "file-loader": "^6.2.0",
-    "html-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.6.3",
-    "image-minimizer-webpack-plugin": "^4.1.3",
-    "image-webpack-loader": "^8.1.0",
-    "imagemin-jpegtran": "^8.0.0",
-    "mini-css-extract-plugin": "^2.9.2",
-    "postcss-loader": "^8.1.1",
-    "style-loader": "^4.0.0",
-    "svgo-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.14",
-    "webpack": "^5.99.7",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
+    "clean-css": "^5.3.3",
+    "clean-css-cli": "^5.6.3",
+    "cssnano": "^7.0.7",
+    "globby": "^14.1.0",
+    "html-minifier-terser": "^7.2.0",
+    "imagemin": "^9.0.1",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-svgo": "^11.0.1",
+    "purgecss": "^7.0.2",
+    "terser": "^5.39.2"
   }
 }
