--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,7 +1,7 @@
 name: Deploy on GitHub Pages
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "feature/optimisation" ]
   pull_request:
     branches: [ "main" ]
     
